# morning-person-esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/esp32-waveshare-epd/: CMakeLists.txt
components/time_sync/: CMakeLists.txt  time_sync.c  time_sync.h
main/: ..c  CMakeLists.txt  main.c  main.cpp
routineScheduling/: CMakeLists.txt  jsonParse.c  jsonParse.h  routineData.c  routineData.h  routine_parser.c  routine_parser.h
spiffs/: CMakeLists.txt  testData.json
